--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,20 @@
-name: CI Toolchain ANFIS
+name: Build
 on:
   push:
     branches:
       - main
       - develop
   pull_request:
-    branches:
-      - "**"
-
+    types: [opened, synchronize, reopened]
 jobs:
-  run-tests-and-sonar:
+  sonarqube:
+    name: SonarQube
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: pip install pytest
-      - name: Run Tests
-        run: |
-          export PYTHONPATH=$PYTHONPATH:.
-          pytest tests/
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_SECRET_MARC }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
