--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,14 @@
-sonar.projectKey=hayou-azizkd_hello-anfis
+sonar.projectKey=Hayou-Azizkd_hello-anfis
 sonar.organization=hayou-azizkd
-sonar.sources=src
-sonar.tests=tests
-sonar.python.version=3.11
-sonar.sourceEncoding=UTF-8
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=hello-anfis
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
