--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,6 @@ sonar.organization=hayou-azizkd
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# Python coverage reports
+sonar.python.coverage.reportPaths=coverage.xml
