ci: update CI workflow to upload coverage report and adjust SonarQube settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,10 +8,13 @@ sonar.organization=hayou-azizkd
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# Exclude test files and unnecessary directories from analysis
+sonar.exclusions=tests/**,**/__pycache__/**,*.egg-info/**,htmlcov/**,.github/**
 
 # Python coverage reports
 sonar.python.coverage.reportPaths=coverage.xml
