--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests with pytest
         run: pytest
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.xml
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
@@ -30,16 +35,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Download coverage report
+        uses: actions/download-artifact@v4
         with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run tests with pytest to generate coverage
-        run: pytest
+          name: coverage-report
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v6
         env:
