fix: update coverage configuration and improve greeting function logic

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,3 +18,10 @@ sonar.exclusions=tests/**,**/__pycache__/**,*.egg-info/**,htmlcov/**,.github/**
 
 # Python coverage reports
 sonar.python.coverage.reportPaths=coverage.xml
+
+# Code coverage requirements
+sonar.coverage.exclusions=tests/**
+sonar.projectBaseDir=.
+
+# Quality gates (minimum thresholds)
+sonar.qualitygate.wait=true
