--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ exclude_lines = [
     "if __name__ == .__main__.:",
     "if TYPE_CHECKING:",
 ]
+fail_under = 80
+precision = 2
+
+[tool.coverage.html]
+directory = "htmlcov"
