--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,20 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests with pytest
         run: pytest
+        continue-on-error: true
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: coverage-report
           path: coverage.xml
+      - name: Fail job if coverage threshold not met
+        run: |
+          if [ ${{ job.status }} == 'failure' ]; then
+            echo "COVERAGE-ERROR: Tests failed due to coverage threshold not being met"
+            exit 1
+          fi
+        if: always()
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
