--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
     name: SonarQube
     runs-on: ubuntu-latest
     needs: run-tests
+    if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
         with:
