--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,60 @@ pluggy==1.6.0
 Pygments==2.19.2
 pytest==9.0.2
 pytest-cov==7.0.0
+alabaster==1.0.0
+attrs==25.4.0
+babel==2.18.0
+beautifulsoup4==4.14.3
+bleach==6.3.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+coverage==7.13.4
+defusedxml==0.7.1
+docutils==0.22.4
+fastjsonschema==2.21.2
+idna==3.11
+imagesize==1.4.1
+iniconfig==2.3.0
+Jinja2==3.1.6
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+jupyterlab_pygments==0.3.0
+MarkupSafe==3.0.3
+mistune==3.2.0
+nbclient==0.10.4
+nbconvert==7.17.0
+nbformat==5.10.4
+nbsphinx==0.9.8
+packaging==26.0
+pandocfilters==1.5.1
+platformdirs==4.9.2
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==9.0.2
+pytest-cov==7.0.0
+python-dateutil==2.9.0.post0
+pyzmq==27.1.0
+referencing==0.37.0
+requests==2.32.5
+roman-numerals==4.1.0
+rpds-py==0.30.0
+six==1.17.0
+snowballstemmer==3.0.1
+soupsieve==2.8.3
+Sphinx==9.1.0
+sphinx_rtd_theme==3.1.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+tinycss2==1.4.0
+tornado==6.5.4
+traitlets==5.14.3
+typing_extensions==4.15.0
+urllib3==2.6.3
+webencodings==0.5.1
