--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
   build-docs:
     name: Build and Deploy Documentation
     runs-on: ubuntu-latest
-    needs: run-tests
+    needs: [run-tests, sonarqube]
     if: success()
     steps:
       - name: Checkout code
