--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build-and-Test
+name: Build-Test-Docs
 on:
   push:
     branches:
@@ -6,6 +6,11 @@ on:
       - develop
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
 jobs:
   run-tests:
     name: Run Tests
@@ -22,13 +27,14 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests with pytest
         run: pytest
-        continue-on-error: true
+        continue-on-error: false
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: coverage-report
           path: coverage.xml
+
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
@@ -51,3 +57,36 @@ jobs:
         timeout-minutes: 5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  build-docs:
+    name: Build and Deploy Documentation
+    runs-on: ubuntu-latest
+    needs: [run-tests, sonarqube]
+    if: success()
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -e .
+
+      - name: Build documentation with Sphinx
+        run: |
+          cd docs
+          make html
+
+      - name: Publish documentation to GitHub Pages
+        if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/develop')
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/build/html
+          force_orphan: true
