--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - "v*.*.*"
+  pull_request:
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 permissions:
@@ -37,7 +39,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -81,7 +83,7 @@ jobs:
     name: Publish Package to PyPI
     runs-on: ubuntu-latest
     needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
 
