--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - "v*.*.*"
+    branches:
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
   workflow_dispatch:
@@ -38,7 +40,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -49,6 +51,8 @@ jobs:
         run: |
           if [[ "$GITHUB_REF" == refs/tags/* ]]; then
             echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          elif [[ "$GITHUB_REF" == refs/heads/main ]]; then
+            echo "VERSION=main-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           else
             echo "VERSION=pr-${{ github.event.number }}-test" >> $GITHUB_OUTPUT
           fi
@@ -73,7 +77,7 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -82,4 +86,4 @@ jobs:
           release_name: Release ${{ steps.get_version.outputs.VERSION }}
           body: ${{ env.RELEASE_BODY }}
           draft: false
-          prerelease: false
+          prerelease: ${{ github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/') }}
