--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,14 @@ on:
   push:
     tags:
       - "v*.*.*"
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 permissions:
   contents: write
-  packages: write
 
 jobs:
   test-before-release:
@@ -37,7 +40,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,13 +48,20 @@ jobs:
 
       - name: Extract version from tag
         id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        run: |
+          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          elif [[ "$GITHUB_REF" == refs/heads/main ]]; then
+            echo "VERSION=main-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          else
+            echo "VERSION=pr-${{ github.event.number }}-test" >> $GITHUB_OUTPUT
+          fi
 
       - name: Generate release notes
         id: release_notes
         run: |
-          VERSION=${{ steps.get_version.outputs.VERSION }}
-          BODY="## Release $VERSION\n\n"
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+          BODY="## Release ${VERSION}\n\n"
           BODY+="### What's New\n"
           BODY+="- Automated testing and documentation generation\n"
           BODY+="- SonarQube code quality analysis\n"
@@ -67,6 +77,7 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -75,32 +86,4 @@ jobs:
           release_name: Release ${{ steps.get_version.outputs.VERSION }}
           body: ${{ env.RELEASE_BODY }}
           draft: false
-          prerelease: false
-
-  publish-package:
-    name: Publish Package to PyPI
-    runs-on: ubuntu-latest
-    needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-
-      - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install build twine
-
-      - name: Build distribution
-        run: python -m build
-
-      - name: Publish to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          python -m twine upload dist/* --skip-existing
+          prerelease: ${{ github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/') }}
