--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,6 @@ on:
       - "v*.*.*"
     branches:
       - main
-  pull_request:
-    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 permissions:
@@ -40,7 +38,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -51,10 +49,8 @@ jobs:
         run: |
           if [[ "$GITHUB_REF" == refs/tags/* ]]; then
             echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-          elif [[ "$GITHUB_REF" == refs/heads/main ]]; then
-            echo "VERSION=main-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           else
-            echo "VERSION=pr-${{ github.event.number }}-test" >> $GITHUB_OUTPUT
+            echo "VERSION=main-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           fi
 
       - name: Generate release notes
@@ -87,3 +83,31 @@ jobs:
           body: ${{ env.RELEASE_BODY }}
           draft: false
           prerelease: ${{ github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/') }}
+
+  publish-package:
+    name: Publish Package to PyPI
+    runs-on: ubuntu-latest
+    needs: test-before-release
+    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
+      - name: Build distribution
+        run: python -m build
+
+      - name: Publish to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          python -m twine upload dist/* --skip-existing
