--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,12 @@ on:
     branches:
       - main
       - develop
+      - "release/**"
+      - "hotfix/**"
   pull_request:
+    branches:
+      - main
+      - develop
     types: [opened, synchronize, reopened]
   workflow_dispatch:
 
@@ -63,7 +68,7 @@ jobs:
     name: Build and Deploy Documentation
     runs-on: ubuntu-latest
     needs: [run-tests, sonarqube]
-    if: success()
+    if: always() && needs.run-tests.result == 'success'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -85,7 +90,7 @@ jobs:
           make html
 
       - name: Publish documentation to GitHub Pages
-        if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/develop')
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -96,6 +101,7 @@ jobs:
     name: Publish Python Package
     runs-on: ubuntu-latest
     needs: run-tests
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/'))
     steps:
       - uses: actions/checkout@v4
 
@@ -122,6 +128,7 @@ jobs:
     name: Publish Container Image
     runs-on: ubuntu-latest
     needs: run-tests
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/') || startsWith(github.ref, 'refs/heads/hotfix/'))
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
