--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,6 @@ on:
   push:
     tags:
       - "v*.*.*"
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 permissions:
@@ -40,7 +36,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: test-before-release
-    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -48,14 +44,7 @@ jobs:
 
       - name: Extract version from tag
         id: get_version
-        run: |
-          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
-            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-          elif [[ "$GITHUB_REF" == refs/heads/main ]]; then
-            echo "VERSION=main-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          else
-            echo "VERSION=pr-${{ github.event.number }}-test" >> $GITHUB_OUTPUT
-          fi
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Generate release notes
         id: release_notes
@@ -77,7 +66,6 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -86,4 +74,32 @@ jobs:
           release_name: Release ${{ steps.get_version.outputs.VERSION }}
           body: ${{ env.RELEASE_BODY }}
           draft: false
-          prerelease: ${{ github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/') }}
+          prerelease: false
+
+  publish-package:
+    name: Publish Package to PyPI
+    runs-on: ubuntu-latest
+    needs: test-before-release
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
+      - name: Build distribution
+        run: python -m build
+
+      - name: Publish to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          python -m twine upload dist/* --skip-existing
